--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,32 +18,32 @@
         </a>
         <ul class="side-menu top">
             <li class="{% if active_page == 'dashboard' %}active{% endif %}">
-                <a href="{{ url_for('dashboard') }}">
+                <a href="{{ url_for('login.dashboard') }}">
                     <i class='bx bxs-dashboard'></i>
                     <span class="text">Dashboard</span>
                 </a>
             </li>
             <li class="{% if active_page == 'tareas' %}active{% endif %}">
-                <a href="{{ url_for('tareas') }}">
+                <a href="{{ url_for('login.dashboard') }}">
                     <i class='bx bx-task'></i>
                     <span class="text">Tareas</span>
                 </a>
             </li>
             
             <li class="{% if active_page == 'usuarios' %}active{% endif %}">
-                <a href="{{ url_for('usuarios') }}" class="dropdown-btn">
+                <a href="{{ url_for('login.dashboard') }}" class="dropdown-btn">
                     <i class='bx bxs-group'></i>
                     <span class="text">Usuarios</span>
                 </a>
             </li>
             <li class="{% if active_page == 'empleados' %}active{% endif %}">
-                <a href="{{ url_for('empleados') }}">
+                <a href="{{ url_for('login.dashboard') }}">
                     <i class='bx bxs-user-account'></i>
                     <span class="text">Empleados</span>
                 </a>
             </li>
             <li class="{% if active_page == 'empresas' %}active{% endif %}">
-                <a href="{{ url_for('empresas') }}">
+                <a href="{{ url_for('login.dashboard') }}">
                     <i class='bx bxs-business'></i>
                     <span class="text">Empresas</span>
                 </a>
@@ -51,7 +51,7 @@
         </ul>
         <ul class="side-menu">
             <li>
-                <a href="#" class="logout">
+                <a href="{{ url_for('login.logout') }}" class="logout">
                     <i class='bx bxs-log-out-circle'></i>
                     <span class="text">Cerrar Sesión</span>
                 </a>
