--- a/templates/login.html
+++ b/templates/login.html
@@ -87,15 +87,12 @@
         {% endif %}
 
         <!-- Formulario de inicio de sesión -->
-        <form method="POST" action="/">
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" required>
-            
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" name="password" required>
-            
+        <form method="POST" action="{{ url_for('login.login') }}">
+            <input type="email" name="email" placeholder="Correo electrónico" required>
+            <input type="password" name="password" placeholder="Contraseña" required>
             <button type="submit">Iniciar Sesión</button>
         </form>
+        
 
         <!-- Muestra el token si el inicio de sesión fue exitoso -->
         {% if token %}
