--- a/templates/login.html
+++ b/templates/login.html
@@ -102,7 +102,7 @@
 
         <!-- Enlace para registrarse -->
         <div class="register-link">
-            <p>¿No tienes una cuenta? <a href="/usuarios/registrar">Regístrate aquí</a></p>
+            <p>¿No tienes una cuenta? <a href="/registrar">Regístrate aquí</a></p>
         </div>
     </div>
 </body>
