--- a/templates/registro.html
+++ b/templates/registro.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Registro de Usuario</h1>
-    <form id="registro-form" action="/usuarios/registrar" method="POST">
+    <form id="registro-form" action="/registrar" method="POST">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required><br><br>
 
